--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,197 @@
-$bgcolor: rgb(0, 255, 119);
+@use 'header';
+@use 'variaveis';
+@use 'hero';
+@use 'content';
+@use 'regressive';
+
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;900&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'poppins', sans-serif;
+}
+
+.container {
+    padding: 0 5.6vw;
+}
 
 body {
-    background-color: $bgcolor;
+    background-color: rgb(0, 0, 0);
+}
+
+img {
+    width: 100%;
+}
+
+@media screen and (max-width:768px ) and (min-width:320px) {
+    .main {
+        margin-top: 28vh;
+    
+        &__nav__list {
+            list-style: none;
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            justify-content: center;
+    
+            .list__link {
+                position: relative;
+                display: inline-block;
+                text-decoration: none;
+                color: variaveis.$corTexto;
+                font-size: 7pt;
+                letter-spacing: 0.1px;
+                padding: 0;
+                font-family: 'poppins', sans-serif;
+                transition: 0.3s ease-in;
+            }
+    
+            a::before,
+            a:after{
+                content: "";
+                position: absolute;
+                height: 3px;
+                width: 0%;
+                background-color: blue;
+                transition: 0.5s;
+            }
+            
+            a:after {
+                z-index: -1;
+                left: 0;
+                bottom: 0;
+            }
+            
+            a:before {
+                right: 0;
+                top: 0px;
+            }
+            
+            a:hover {
+                color: variaveis.$corTextosPrincipal;
+                text-shadow: 0 0 5px variaveis.$corTextosPrincipal;
+                font-weight: 700;
+                font-size: 8pt;
+                transition: 0.3s ease-in;
+            }
+            
+            a:hover:after,
+            a:hover:before {
+                width: 100%;
+            }
+        }
+    }
+
+    .content {
+        background-color: black;
+        color: variaveis.$corTexto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 10px 10px;
+    }
+    
+    .text h2 {
+            text-transform: uppercase;
+            text-align: center;
+            font-size: 20pt;
+        }
+    
+    .text p {
+        line-height: 150%;
+        text-align: center;
+        max-width: 780px;
+    }
+    
+    .haircuts {
+        display: block;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;
+        margin-top: 0;
+        margin-bottom: 0;
+        padding: 0 0px 0px 0;
+    }
+    
+    .haircut {
+        flex: 1;
+        display: block;
+        background-color: variaveis.$corTextosPrincipal;
+        border-radius: 8px;
+        box-shadow: 5px -5px 17px 5px rgba(blue, 0.5);
+        overflow: hidden;
+        transition: transform 0.2s;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    
+        &__text{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            padding: 14px;
+            background-color: variaveis.$corTextosPrincipal;
+        }
+    
+        img {
+            width: 100%;
+            max-width: 354px;
+        }
+    }
+    
+    .haircut:hover {
+        transform: scale(1.2);
+        z-index: 1;
+        border: 2px solid blue;
+    }
+    
+    .haircut__text button {
+        color: #fff;
+        background-color: rgb(80, 100, 255);
+        padding: 4px 8px;
+        border-radius: 4px;
+        border: 0;
+        cursor: pointer;
+    
+        &:hover {
+            background-color: blue;
+        }
+    }
+    
+    strong {
+        color: variaveis.$corTexto;
+    }
+
+    .regressive {
+        border: none;
+        outline: none;
+        text-decoration: none;
+        text-transform: capitalize;
+        background: url(../images/equipe.png);
+        background-size: cover;
+        min-height: 100vh;
+        width: 100%;
+        max-width: 768px;
+        opacity: .9;
+    }
+    
+    .container .content-rg {
+        position: absolute;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        border-radius: 10px;
+        border: 2px solid blue;
+        background-color: rgba(91, 99, 255, 0.363);
+        opacity: .9;
+        width: 400px;
+        max-width: 768px;
+        z-index: 1;
+        margin: 0;
+        min-width: 2px;
+    }
 }
